# Notion2Git

./: .gitignore  CLI Command Reference.md  README.md  pyproject.toml  sync.py
.github/workflows/: sync.yml
notion_sync/: __init__.py  cache.py  config.py  git_manager.py  logger.py  markdown_converter.py  notion_client.py  parser.py  utils.py
