[project]
name = "notion2git"
version = "0.1.0"
description = "Mirror Notion database to a Git repository as Markdown notes"
readme = "README.md"
authors = [
    { name = "Stellar", email = "stellar.merge@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "notion-client>=3.1.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "httpx>=0.27.0",
]
